--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -8,7 +8,7 @@ tasks:
       - |
        sudo chmod +x sonar_scanar.sh
        ./sonar_scanar.sh
-       #sonar-scanner \
+       sonar-scanner \
         -Dsonar.projectKey= python \
         -Dsonar.sources=. \
         -Dsonar.host.url=http://13.233.98.144:9000 \
